hero section e skills section

--- a/index.html
+++ b/index.html
@@ -6,7 +6,39 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <!--navigation--> 
+    <nav class="navbar">
+        <a> href = "#home" class= "logo"> devjunior</a>
+        <ul class = "nav-links">
+            <li><a a href = "#home"> home </a> </li>
+            <li><a a href = "#skills"> skills </a> </li>
+            <li><a a href = "#projects">  projects </a></li>
+            <li><a a href = "contact"> contact </a> </li>
+        </ul>
+    </nav>
+
+<!--hero section-->
+<section id = "home" class="hero">
+    <div class = "hero-contect">
+        <h1>Meu portifolio</h1>
+        <p>texto sobre a gente</p>
+        <a href = "#contact" class="cta-buton"> contato</a>
+    </div>
+    <div class="hero-image"> 
+        <img scr = "suaimagem.jpg" alt="Profile" class="Profile img"> 
+    </div>
+</section>
+
+<!--Skills section-->
+<section id="skills" class="skills">
+    <h2> Minhas habilidades</h2>
+    <div class="skill-grid">
+    <div class="skill-card">
+        <i class="fa-solid fa-circle-user"></i>
+
+    </div>
+    </div>
+</section>
 </body>
 </html>
 
