--- a/index.html
+++ b/index.html
@@ -4,28 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!--navigation--> 
     <nav class="navbar">
-        <a> href = "#home" class= "logo"> devjunior</a>
+        <a href = "#home" class= "logo"> devjunior</a>
         <ul class = "nav-links">
-            <li><a a href = "#home"> home </a> </li>
-            <li><a a href = "#skills"> skills </a> </li>
-            <li><a a href = "#projects">  projects </a></li>
-            <li><a a href = "contact"> contact </a> </li>
+            <li><a href = "#home"> home </a> </li>
+            <li><a href = "#skills"> skills </a> </li>
+            <li><a href = "#projects">  projects </a></li>
+            <li><a href = "#contact"> contact </a> </li>
         </ul>
     </nav>
 
 <!--hero section-->
 <section id = "home" class="hero">
-    <div class = "hero-contect">
+    <div class = "hero-content">
         <h1>Meu portifolio</h1>
-        <p>texto sobre a gente</p>
-        <a href = "#contact" class="cta-buton"> contato</a>
+        <p>Oi! Chamo-me Stephanie Nicole Guillen Rondon. Seja bem-vindo ao meu portifolio!</p>
     </div>
     <div class="hero-image"> 
-        <img scr = "suaimagem.jpg" alt="Profile" class="Profile img"> 
+        <img src = "minhapessoa.jpg" alt="Profile" class="Profile img"> 
     </div>
 </section>
 
@@ -35,7 +35,9 @@
     <div class="skill-grid">
     <div class="skill-card">
         <i class="fa-solid fa-circle-user"></i>
-
+        <p>Tenho conhecimentos sólidos sobre HTML, JavaScript e Css.<br>
+        Gosto de obter conhecimentos e sempre estar atualizada no meu <br>
+        campo laboral.</p>
     </div>
     </div>
 </section>
