--- a/index.html
+++ b/index.html
@@ -4,22 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" type="text/css" href="style.css" media="screen">
 </head>
 <body>
     <!--navigation--> 
     <nav class="navbar">
-        <a href = "#home" class= "logo"> devjunior</a>
-        <ul class = "nav-links">
-            <li><a href = "#home"> home </a> </li>
-            <li><a href = "#skills"> skills </a> </li>
-            <li><a href = "#projects">  projects </a></li>
-            <li><a href = "#contact"> contact </a> </li>
+        <a href = "#home" class= "logo">Devjunior</a>
+        <ul class="nav-links">
+            <li> <a href="#home"> Home </a></li>
+            <li> <a href="#skills"> Minhas habilidades </a></li>
+            <li> <a href="#projects"> Projetos </a></li>
+            <li> <a href="#contact"> Contato </a></li>
         </ul>
     </nav>
 
-<!--hero section-->
-<section id = "home" class="hero">
+ <!--hero section-->
+ <section id = "home" class="hero">
     <div class = "hero-content">
         <h1>Meu portifolio</h1>
         <p>Oi! Chamo-me Stephanie Nicole Guillen Rondon. Seja bem-vindo ao meu portifolio!</p>
@@ -27,10 +27,10 @@
     <div class="hero-image"> 
         <img src = "minhapessoa.jpg" alt="Profile" class="Profile img"> 
     </div>
-</section>
+ </section>
 
-<!--Skills section-->
-<section id="skills" class="skills">
+ <!--Skills section-->
+ <section id="skills" class="skills">
     <h2> Minhas habilidades</h2>
     <div class="skill-grid">
     <div class="skill-card">
@@ -40,7 +40,26 @@
         campo laboral.</p>
     </div>
     </div>
-</section>
-</body>
-</html>
+ </section>
 
+    <!--Projects Section-->
+ <section id = "projects" class="projects">
+    <div class = "hero-content">
+        <h1> A seguir estão os links de alguns projetos realizados por mim:
+        </h1>
+        <ul>
+            <p>https://pizzaria-nami.netlify.app/<br>
+                https://escolhendo-oportunidades.netlify.app/
+            </p>
+        </ul>
+    </div>
+ </section>
+
+    <!--Contact Section-->
+ <section id = "contact" class="contact">
+    <div class = "hero-content">
+        <h1>Contato</h1>
+        <p>Entre em contato comigo pelo gmail: stephanie.rondon@gmail.com</p>
+    </div>
+ </section>
+</body></html>
